Tons of style changes 4

--- a/src/App.scss
+++ b/src/App.scss
@@ -211,7 +211,8 @@ select:focus {
 .thin-underline {
   border-bottom: solid;
   border-width: 1px;
-  color: white;
+  color: #d4a824;
+  border-color: #d4a824;
 }
 
 .no-select {
