--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -13,7 +13,7 @@
     padding: 40px 50px 30px 50px;
     color: #d4c4a8;
     background: linear-gradient(180deg, #1a1410 0%, #0d0a08 100%);
-    border-top: 3px solid #3d2e1f;
+    border-top: 1px solid #2a1f14;
     text-align: left;
     position: relative;
     z-index: 10;
@@ -130,17 +130,6 @@
     position: relative;
 
     &:hover {
-      color: #c9a227;
-    }
-
-    &::before {
-      content: '► ';
-      font-size: 0.6em;
-      color: #5a4a3a;
-      transition: color 0.2s ease-out;
-    }
-
-    &:hover::before {
       color: #c9a227;
     }
   }
