--- a/src/components/HeaderBar/headerBar.scss
+++ b/src/components/HeaderBar/headerBar.scss
@@ -146,10 +146,12 @@
       margin-bottom: 1px;
       margin-top: 2px;
       margin-left: 5px;
+      min-width: 171px;
     }
 
     img {
       height: 100%;
+      width: auto;
       margin-right: 15px;
     }
 
