--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -23,8 +23,8 @@
   .panelTitle {
     font-weight: 700;
     font-size: 28px;
-    padding: 15px 20px;
-    padding-bottom: 8px;
+    padding: 0 20px 0 20px;
+    margin-top: -1px;
     margin-bottom: 4px;
     color: #f0d050;
     text-shadow:
