--- a/src/components/MainBanner/mainBanner.scss
+++ b/src/components/MainBanner/mainBanner.scss
@@ -18,6 +18,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(ellipse at center, transparent 65%, rgba(0, 0, 0, 0.45) 90%);
+    pointer-events: none;
+    z-index: 0;
+  }
 
   .videoBg {
     position: absolute;
