--- a/src/components/MainBanner/mainBanner.scss
+++ b/src/components/MainBanner/mainBanner.scss
@@ -79,3 +79,39 @@
     }
   }
 }
+
+// Forb confetti effect
+@keyframes forb-fall {
+  0% {
+    top: -150px;
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    top: 110vh;
+    opacity: 0;
+    transform: rotate(var(--end-rotation, 0deg)) scale(var(--scale, 1)) translateX(var(--drift, 0px));
+  }
+}
+
+.forb-confetti-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+  overflow: hidden;
+}
+
+.forb-confetti {
+  position: absolute;
+  top: -150px;
+  width: 50px;
+  height: auto;
+  animation: forb-fall linear forwards;
+  pointer-events: none;
+}
