--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -8,6 +8,7 @@
     max-height: 350px;
     border-radius: 4px;
     border: 3px solid #1a1510;
+    filter: blur(0.3px) contrast(0.98) saturate(1.05);
     box-shadow:
       0 0 0 1px #8a7235,
       0 4px 12px rgba(0, 0, 0, 0.5),
