--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -12,8 +12,8 @@
     flex-flow: row wrap;
     padding: 40px 50px 30px 50px;
     color: #d4c4a8;
-    background: linear-gradient(180deg, #1a1410 0%, #0d0a08 100%);
-    border-top: 1px solid #2a1f14;
+    background: linear-gradient(180deg, #140d06 0%, #0a0604 100%);
+    border-top: 1px solid #2d1c10;
     text-align: left;
     position: relative;
     z-index: 10;
@@ -25,7 +25,7 @@
       left: 0;
       right: 0;
       height: 2px;
-      background: linear-gradient(90deg, transparent, #c9a227, transparent);
+      background: linear-gradient(90deg, #3a2a10 0%, #c9a227 50%, #3a2a10 100%);
     }
   }
 
@@ -36,7 +36,7 @@
   .footer__addr {
     margin-right: 1.5em;
     padding-right: 2em;
-    border-right: 1px solid #3d2e1f;
+    border-right: 1px solid #422918;
   }
 
   .footer__logo {
@@ -63,7 +63,7 @@
     letter-spacing: 1px;
     margin-bottom: 0.8em;
     padding-bottom: 0.5em;
-    border-bottom: 2px solid #3d2e1f;
+    border-bottom: 2px solid #422918;
     display: inline-block;
   }
 
@@ -80,7 +80,7 @@
     justify-content: center;
     height: 40px;
     max-width: max-content;
-    background: linear-gradient(180deg, #4a3728 0%, #2d1f15 100%);
+    background: linear-gradient(180deg, #4e3320 0%, #301c10 100%);
     border: 2px solid #c9a227;
     border-radius: 3px;
     color: #c9a227 !important;
@@ -95,7 +95,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
 
     &:hover {
-      background: linear-gradient(180deg, #5a4738 0%, #3d2f25 100%);
+      background: linear-gradient(180deg, #5e4230 0%, #422a1e 100%);
       box-shadow: 0 0 10px rgba(201, 162, 39, 0.3);
     }
   }
@@ -145,7 +145,7 @@
     color: #5a4a3a;
     margin-top: 2em;
     padding-top: 1.5em;
-    border-top: 1px solid #3d2e1f;
+    border-top: 1px solid #422918;
   }
 
   .legal__links {
@@ -160,7 +160,7 @@
   .footer__divider {
     width: 100%;
     height: 1px;
-    background: linear-gradient(90deg, transparent, #3d2e1f, transparent);
+    background: linear-gradient(90deg, transparent, #422918, transparent);
     margin: 1.5em 0;
   }
 
@@ -190,7 +190,7 @@
 .Footer.footer-mobile {
   .footer__addr {
     border-right: none;
-    border-bottom: 1px solid #3d2e1f;
+    border-bottom: 1px solid #422918;
     padding-bottom: 1.5em;
     margin-bottom: 1.5em;
     padding-right: 0;
