Materials and also fishes

--- a/src/components/Shuffle/Shuffle.scss
+++ b/src/components/Shuffle/Shuffle.scss
@@ -549,8 +549,66 @@
   background-size: 100%
 }
 
+.fishImg {
+  background-image: url('../../../public/assets/Raw_Cod_JE4_BE2.png');
+  background-size: 100%
+}
+
 .socketGemImg {
   background-image: url('../../../public/assets/gem/socket_gem_2.png');
+  background-size: 100%
+}
+
+.PAPER {
+  background-image: url('../../../public/assets/Paper_JE2_BE2.png');
+  background-size: 100%
+}
+.LEATHER {
+  background-image: url('../../../public/assets/Leather_JE2_BE2.png');
+  background-size: 100%
+}
+.IRON_INGOT {
+  background-image: url('../../../public/assets/Iron_Ingot_JE3_BE2.png');
+  background-size: 100%
+}
+.GOLD_INGOT {
+  background-image: url('../../../public/assets/Gold_Ingot_JE4_BE2.png');
+  background-size: 100%
+}
+.ORANGE_DYE {
+  background-image: url('../../../public/assets/topaz.png');
+  background-size: 100%
+}
+.RED_DYE {
+  background-image: url('../../../public/assets/ruby.png');
+  background-size: 100%
+}
+.EMERALD {
+  background-image: url('../../../public/assets/emerald.png');
+  background-size: 100%
+}
+.DIAMOND {
+  background-image: url('../../../public/assets/crystal.png');
+  background-size: 100%
+}
+.LAPIS_LAZULI {
+  background-image: url('../../../public/assets/sapphire.png');
+  background-size: 100%
+}
+.STICK {
+  background-image: url('../../../public/assets/Stick_JE1_BE1.png');
+  background-size: 100%
+}
+.STRING {
+  background-image: url('../../../public/assets/string.png');
+  background-size: 100%
+}
+.CLAY_BALL {
+  background-image: url('../../../public/assets/stone.png');
+  background-size: 100%
+}
+.SWEET_BERRIES {
+  background-image: url('../../../public/assets/berries.png');
   background-size: 100%
 }
 
